More appropriate deps-to-build report when redhat versions are in the mix